@@ -1,4 +1,4 @@
-MANIFEST for c_count, version v7_0
+MANIFEST for c_count, version v7_1
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 CHANGES                         extracted change-log from c_count.c
